[package]
name = "btc-relay"
version = "0.6.0"
authors = ['Interlay Ltd <contact@interlay.io>']
edition = "2018"

[dependencies]
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false, features = ["derive"] }
serde = { version = "1.0.101", default-features = false, features = ['derive'], optional = true }
hex = { version = "0.4.2", default-features = false }
primitive-types = { version = "0.9.0", default-features = false, features = ["codec"] }

# Substrate dependencies
sp-io = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }
sp-std = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }
sp-arithmetic = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }

frame-support = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }
frame-system = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }
frame-benchmarking = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false, optional = true }
pallet-timestamp = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }

# Parachain dependencies
bitcoin = { path = "../bitcoin", default-features = false }
sla = { path = "../sla", default-features = false }
security = { path = "../security", default-features = false }
log = { version = "0.4.14", default-features = false }

[dev-dependencies]
mocktopus = "0.7.0"
frame-benchmarking = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }
pallet-balances = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }
pallet-randomness-collective-flip = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }

vault-registry = { path = "../vault-registry", default-features = false }
currency = { path = "../currency", default-features = false }
exchange-rate-oracle = { path = "../exchange-rate-oracle", default-features = false }

[features]
default = ["std"]
no-btc = []
std = [
    "serde",
    "codec/std",
    "hex/std",
    "primitive-types/std",
    "sp-io/std",
    "sp-core/std",
    "sp-std/std",
    "sp-arithmetic/std",
    "frame-support/std",
    "frame-system/std",
    "frame-benchmarking/std",
    "pallet-timestamp/std",
    "bitcoin/std",
    "sla/std",
    "security/std",
]
runtime-benchmarks = [
	"frame-benchmarking",
	"frame-support/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
]
