[package]
authors = ['Interlay Ltd']
description = 'Collateral module'
edition = '2018'
homepage = 'https://interlay.gitlab.io/polkabtc-spec/spec/collateral.html'
name = 'collateral'
version = '0.3.0'

[dependencies]
serde = { version = "1.0.101", default-features = false, features = ['derive'], optional = true }
codec = { package = "parity-scale-codec", version = "1.3.4", default-features = false, features = ['derive'] }

frame-support = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "master" }
frame-system = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "master" }
pallet-balances = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "master" }

[dev-dependencies]
sp-core = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "master" }
sp-io = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "master" }
sp-runtime = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "master" }

[features]
default = ["std"]
std = [
  "serde",
  "codec/std",
  "frame-support/std",
  "frame-system/std",
  "pallet-balances/std",
]
