[package]
authors = ['Interlay Ltd']
description = 'Collateral module'
edition = '2018'
homepage = 'https://interlay.gitlab.io/polkabtc-spec/spec/collateral.html'
name = 'collateral'
version = '0.3.0'

[dependencies]
serde = { version = "1.0.101", default-features = false, features = ['derive'], optional = true }
codec = { package = "parity-scale-codec", version = "1.3.4", default-features = false, features = ['derive'] }

frame-support = { version = "2.0.0", default-features = false }
frame-system = { version = "2.0.0", default-features = false }
pallet-balances = { version = "2.0.0", default-features = false }

[dev-dependencies]
sp-core = { version = "2.0.0", default-features = false }
sp-io = { version = "2.0.0", default-features = false }
sp-runtime = { version = "2.0.0", default-features = false }

[features]
default = ["std"]
std = [
  "serde",
  "codec/std",
  "frame-support/std",
  "frame-system/std",
  "pallet-balances/std",
]
