[package]
authors = ['Interlay Ltd']
description = 'Collateral module'
edition = '2018'
homepage = 'https://interlay.gitlab.io/polkabtc-spec/spec/collateral.html'
name = 'collateral'
version = '0.5.0'

[dependencies]
serde = { version = "1.0.101", default-features = false, features = ['derive'], optional = true }
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false, features = ["derive"] }

frame-support = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }
frame-system = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }
pallet-balances = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }

[dev-dependencies]
sp-core = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }
sp-io = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }

[features]
default = ["std"]
std = [
  "serde",
  "codec/std",
  "frame-support/std",
  "frame-system/std",
  "pallet-balances/std",
]
