[package]
authors = ["Interlay Ltd"]
description = "Currency module"
edition = "2018"
homepage = "https://interlay.gitlab.io/polkabtc-spec/spec/collateral.html"
name = "currency"
version = "0.8.0"

[dependencies]
serde = { version = "1.0.119", default-features = false, features = ["derive"], optional = true }
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false, features = ["derive"] }

sp-std = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.5", default-features = false }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.5", default-features = false }
frame-support = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.5", default-features = false }
frame-system = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.5", default-features = false }
pallet-transaction-payment = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.5", default-features = false }

# Orml dependencies
orml-tokens = { git = "https://github.com/interlay/open-runtime-module-library", rev = "189dfe2", default-features = false }
orml-traits = { git = "https://github.com/interlay/open-runtime-module-library", rev = "189dfe2", default-features = false }

[dev-dependencies]
sp-core = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.5", default-features = false }
sp-io = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.5", default-features = false }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.5", default-features = false }

[features]
default = ["std"]
std = [
  "serde",
  "codec/std",

  "sp-std/std",
  "sp-runtime/std",
  "frame-support/std",
  "frame-system/std",
  "pallet-transaction-payment/std",

	"orml-tokens/std",
	"orml-traits/std",
]
