[package]
name = "exchange-rate-oracle"
version = '0.5.0'
authors = ["Interlay Ltd"]
edition = "2018"

[dependencies]
serde = { version = "1.0.101", default-features = false, features = ['derive'], optional = true }
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false, features = ["derive"] }

# Substrate dependencies
sp-io = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }
sp-std = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }
sp-arithmetic = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }

frame-support = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }
frame-system = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }
frame-benchmarking = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false, optional = true }
pallet-timestamp = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }
pallet-balances = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }

# Parachain dependencies
collateral = { path = "../collateral", default-features = false }
treasury = { path = "../treasury", default-features = false }
security = { path = "../security", default-features = false }

[dev-dependencies]
mocktopus = "0.7.0"
frame-benchmarking = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }

[features]
default = ["std"]
std = [
    "serde",
    "codec/std",
    "sp-io/std",
    "sp-core/std",
    "sp-std/std",
    "sp-runtime/std",
    "sp-arithmetic/std",
    "frame-support/std",
    "frame-system/std",
    "frame-benchmarking/std",
    "pallet-timestamp/std",
    "pallet-balances/std",
    "collateral/std",
    "treasury/std",
    "security/std",
]
runtime-benchmarks = [
	"frame-benchmarking",
	"frame-support/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
]
